--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -28,14 +28,14 @@
     margin-left: 20px;
   }
   a {
-    color: rgba(255,255,255,0.6);
+    color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
     &:hover {
       color: rgba(255,255,255,0.8);
     }
   }
   a[aria-current="page"] {
-    color: rgba(255,255,255,1)
+    color: rgb(255, 255, 255)
   }
   .menu-trigger {
     display: none;
