--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -13,7 +13,7 @@ $breakpoint-xl: 1200px;
   --primary-color: #5C2941;
   --header-bg: #5C2941;
 
-  --home-link-color: #d4d4d4;
+  --home-link-color: #230cf0;
   --home-link-hover-color:  var(--primary-color);
 
   --button-color: #E5C3D3;
