--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -157,9 +157,16 @@
 	transition: box-shadow .3s linear;
 	.featured-image {
 		border-radius: 12px;
+		position: relative;
+		overflow: hidden;
+		aspect-ratio: 3/2;
 		img {
 			display: block;
 			margin: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center;
 		}
 	}
 	.title {
@@ -250,6 +257,21 @@ article img {
 .blog-post {
 	.featured-image {
 		border-radius: 12px;
+	}
+	.post-meta {
+		display: flex;
+		align-items: center;
+		margin-bottom: 20px;
+		time {
+			color: var(--text-color-meta);
+		}
+		.reading-time {
+			color: var(--text-color-meta);
+			&:before {
+				content: "•";
+				margin: 0 8px;
+			}
+		}
 	}
 }
 // Buttons 
