--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -91,6 +91,8 @@
 	margin: 0 auto;
 	max-width: 1240px;
 	padding: 0 20px;
+	width: 100%;
+	overflow-x: hidden;
 }
 .site-logo {
   font-weight: bold;
@@ -108,6 +110,8 @@
 .home-banner {
 	padding: 60px 0;
 	align-items: center;
+	width: 100%;
+	overflow: hidden;
 	.title {
 		font-size: 48px;
 		line-height: 48px;
@@ -118,10 +122,22 @@
 		font-size: 20px;
 		line-height: 1.4;
 		margin-bottom: 30px;
-
 	}
 	.featured-image {
 		border-radius: 12px;
+		position: relative;
+		overflow: hidden;
+		aspect-ratio: 3/2;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center;
+		}
 	}
 	@media (max-width: $breakpoint-sm) {
 		padding: 30px 0;
@@ -130,6 +146,10 @@
 		}
 		.tagline {
 			margin-top: 3px;
+		}
+		.featured-image {
+			margin: 0 auto;
+			width: 100%;
 		}
 	}
 }
@@ -145,6 +165,10 @@
 .home-posts {
 	.grids {
 		padding-bottom: 30px;
+		width: 100%;
+		@media (max-width: $breakpoint-md) {
+			padding: 0;
+		}
 	}
 	padding-bottom: 100px;
 }
@@ -155,14 +179,18 @@
 	box-shadow: 0 5px 10px rgba(0,0,0,0.05);
 	border-radius: 12px;
 	transition: box-shadow .3s linear;
+	box-sizing: border-box;
+	
 	.featured-image {
 		border-radius: 12px;
 		position: relative;
 		overflow: hidden;
 		aspect-ratio: 3/2;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		img {
 			display: block;
-			margin: 0;
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
@@ -173,27 +201,22 @@
 		margin: 0 0 3px;
 		font-size: 20px;
 		font-weight: 600;
-		// a { 
-		// 	color: var(--post-link-color);
-		// }
 	}
 	&:hover {
 		border: 1px solid rgba(0,0,0,0.12);
 		box-shadow: 0 30px 60px rgba(0,0,0,0.1);
-		// .title {
-		// 	color: var(--button-alternate-color);
-		// }
 	}
 	.meta {
 		margin: 0;
 		font-size: 12px;
-		// color: rgba(0,0,0,0.5);
 	}
 	.post-content {
 		margin-top: 16px;
 	}
 	@media (max-width: $breakpoint-md) {
 		padding: 0;
+		margin-bottom: 20px;
+		
 		.post-content {
 			padding: 16px;
 			margin-top: 0;
@@ -257,6 +280,14 @@ article img {
 .blog-post {
 	.featured-image {
 		border-radius: 12px;
+		max-width: 100%;
+		height: auto;
+		margin: 0 auto;
+		img {
+			width: 100%;
+			height: auto;
+			object-fit: cover;
+		}
 	}
 	.post-meta {
 		display: flex;
