--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -274,6 +274,21 @@ body {
 				margin: -1px -3px;
 				border-radius: 3px;
 			}
+			
+			// Exclude buttons from link animations
+			&.button {
+				text-decoration: none;
+				font-weight: normal;
+				transition: background .3s linear;
+				
+				&:hover {
+					text-decoration: none;
+					background: var(--button-color);
+					color: var(--button-alternate-color);
+					padding: var(--padding) calc(var(--padding) * 2);
+					margin: 0;
+				}
+			}
 		}
 	}
 	@media (max-width: $breakpoint-md) {
@@ -370,15 +385,35 @@ article img {
 			border-radius: 2px;
 		}
 		
+		// Exclude buttons from link animations
+		&.button {
+			text-decoration: none;
+			font-weight: normal;
+			transition: background .3s linear;
+			
+			&:hover {
+				text-decoration: none;
+				background: var(--button-color);
+				color: var(--button-alternate-color);
+				padding: var(--padding) calc(var(--padding) * 2);
+				margin: 0;
+			}
+			
+			&:focus {
+				outline: 2px solid var(--button-color);
+				outline-offset: 2px;
+			}
+		}
+		
 		// Add a subtle arrow for external links
-		&[href^="http"]:not([href*="thucldnguyen"]):after {
+		&[href^="http"]:not([href*="thucldnguyen"]):not(.button):after {
 			content: " ↗";
 			font-size: 0.8em;
 			opacity: 0.7;
 			transition: opacity 0.3s ease;
 		}
 		
-		&[href^="http"]:not([href*="thucldnguyen"]):hover:after {
+		&[href^="http"]:not([href*="thucldnguyen"]):not(.button):hover:after {
 			opacity: 1;
 		}
 	}
